--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "author": "Baptiste Perbos <baptiste.perbos@gmail.com>",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2"
   },
   "devDependencies": {
