--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Baptiste Perbos <baptiste.perbos@gmail.com>",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.16.2"
+    "dotenv": "^5.0.0",
+    "express": "^4.16.2",
+    "express-jwt": "^5.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
