--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
-    "express-jwt": "^5.3.0"
+    "express-jwt": "^5.3.0",
+    "mongodb": "^3.0.2",
+    "mongoose": "^5.0.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
