red to green testing, refactor code

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 SECRET='testsssecret'
-MONGO_DB_NAME='nodeapi'
+MONGO_DB_NAME_DEV='nodeapi'
+MONGO_DB_NAME_TEST='nodeapitest'
 MONGO_DB_URI='mongodb://localhost:27017'
