--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "babel-node": "babel-node --presets=env",
-    "start": "nodemon --exec npm run babel-node -- ./index.js",
-    "build": "babel src -d dist",
-    "test": "mocha --require babel-register"
+    "start": "NODE_ENV=dev nodemon --exec npm run babel-node -- ./index.js",
+    "build": "NODE_ENV=production babel src -d dist",
+    "test": "NODE_ENV=test mocha --require babel-register --exit"
   },
   "author": "Baptiste Perbos <baptiste.perbos@gmail.com>",
   "dependencies": {
