--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "babel-node": "babel-node --presets=env",
     "start": "NODE_ENV=dev nodemon --exec npm run babel-node -- ./index.js",
     "build": "NODE_ENV=production babel src -d dist",
-    "test": "NODE_ENV=test mocha --require babel-register --exit"
+    "test": "NODE_ENV=test mocha --require babel-register --require babel-polyfill --exit"
   },
   "author": "Baptiste Perbos <baptiste.perbos@gmail.com>",
   "dependencies": {
@@ -22,6 +22,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
